<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/help"
        android:title="@string/help"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_help"/>

    <item android:id="@+id/openbluetooth"
        android:title="@string/connect"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_bluetooth"/>

    <item android:id="@+id/quitbluetooth"
        android:title="@string/quitbluetooth"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_bluetooth_stop"/>

    <item android:id="@+id/rating"
        android:title="@string/rating"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_important"/>

    <item android:id="@+id/about_us"
        android:title="@string/aboutus"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_group"/>

</menu>
